# klondike

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  ROADMAP.md  docker-compose.yml  pyproject.toml  requirements.txt  run_checks.sh  run_setup.sh  setup.py
.github/workflows/: automated_tests.yml  ci_cd.yml  pr_checks.yml  publish.yml
devops/: create_development_file.py
klondike/: __init__.py
klondike/aws/: redshift.py  s3.py
klondike/base/: abc_klondike.py  generic_db.py
klondike/bigquery/: bigquery.py
klondike/cloud_storage/: cloud_storage.py
klondike/gcp/: bigquery.py  cloud_storage.py
klondike/postgres/: postgres.py
klondike/redshift/: redshift.py
klondike/scripts/: __init__.py  stream_csv_to_bigquery.py  stream_csv_to_database.py
klondike/snowflake/: snowflake.py
klondike/utilities/: logger.py  utilities.py
polar_bare/: __init__.py
polar_bare/bigquery/: bigquery.py
polar_bare/pbear/: generic_db.py
polar_bare/postgres/: postgres.py
polar_bare/redshift/: redshift.py
polar_bare/snowflake/: snowflake.py
tests/: test_bigquery.py  test_bigquery_connector.py  test_utils.py
tests/aws/: test_redshift.py  test_s3.py
tests/common/: tests_common.py
tests/gcp/: test_bigquery.py  test_cloud_storage.py
tests/postgres/: test_postgres.py
tests/scripts/: test_stream_csv_to_bigquery.py
tests/snowflake/: test_snowflake.py
