[project]
name = "klondike"
version = "0.3.0"
authors = [{ "name" = "Ian Richard Ferguson", "email" = "IAN@ianferguson.dev" }]
description = "Klondike is a suite of database connectors, powered by Polars"
requires-python = "~=3.12.0"
license = "MIT"
keywords = [
    "polars",
    "bigquery",
    "snowflake",
    "redshift",
    "elt",
    "data engineering",
    "data processing",
]
readme = "./README.md"
dependencies = [
    "google-cloud-bigquery==3.40.0",
    "google-cloud-storage==3.9.0",
    "snowflake-connector-python==4.2.0",
    "polars==1.38.1",
    "pyarrow==23.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["klondike"]

[dependency-groups]
dev = [
    "pytest~=8.0.0",
    "pytest-cov~=4.1.0",
    "pytest-watcher~=0.4.0",
    "ruff~=0.4.0",
    "mypy~=1.9.0",           # Strict static type checking
    "pre-commit~=3.4.0",
]

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
extend-ignore = [
    "F401",
    "E203",
    "E266",
    "E402",
    "E501",
    "E711",
    "E712",
    "F403",
    "F821",
]
select = ["E", "F", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"

[tool.mypy]
# Strict type checking configuration
strict = true
ignore_missing_imports = true
mypy_path = "src"
explicit_package_bases = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
